--- a/isaacPage/index.html
+++ b/isaacPage/index.html
@@ -4,15 +4,15 @@
         <link type="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>
+        <div class="wrapper">
             <div class= "nav">
-                <a>1</a>
-                <a>2</a>
-                <a>3</a>
-                <a>4</a>
-                <a>5</a>
+                <a href="../Braden/html/Braden.html">Braden</a>
+                <a href="../Brycesfolder/index.html">Bryce</a>
+                <a href="#">Isaac</a>
+                <a href="">Jared</a>
+                <a href="../QuinSite/QMain.html">Quin</a>
             </div>
-            <div class="wrapper">
+            <div class="main">
                 <div class="content">
                     <span>Pretend there is a really long, really boring, very meaningless thing of Lorem Ipsum here</span>
                     <span>I took Latin for 2 years and remember none of it</span>
