--- a/isaacPage/index.html
+++ b/isaacPage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <div class="wrapper">
@@ -9,7 +9,7 @@
                 <a href="../Braden/html/Braden.html">Braden</a>
                 <a href="../Brycesfolder/index.html">Bryce</a>
                 <a href="#">Isaac</a>
-                <a href="">Jared</a>
+                <a href="../Jared/Home.html">Jared</a>
                 <a href="../QuinSite/QMain.html">Quin</a>
             </div>
             <div class="main">
