--- a/isaacPage/index.html
+++ b/isaacPage/index.html
@@ -2,15 +2,20 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="wrapper">
             <div class= "nav">
-                <a href="../Braden/html/Braden.html">Braden</a>
-                <a href="../Brycesfolder/index.html">Bryce</a>
-                <a href="#">Isaac</a>
-                <a href="../Jared/Home.html">Jared</a>
-                <a href="../QuinSite/QMain.html">Quin</a>
+                <div class="navItems">
+                    <a href="../Braden/html/Braden.html">Braden</a>
+                    <a href="../Brycesfolder/index.html">Bryce</a>
+                    <a href="#">Isaac</a>
+                    <a href="../Jared/Home.html">Jared</a>
+                    <a href="../QuinSite/QMain.html">Quin</a>
+                </div>
             </div>
             <div class="main">
                 <div class="content">
