--- a/Brycesfolder/index.html
+++ b/Brycesfolder/index.html
@@ -4,15 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bryces Webpage</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class ="nav">
+    <nav class="header" class="btn">
         <ol>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ol>
+    </nav>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+
+    <div class="box1">
+        <ol>
+            <ul>
+                
+                Introduction:
+                In the vast landscape of video games, one title has managed to capture the hearts and minds of millions worldwide – Minecraft. Since its inception, this sandbox phenomenon has proven itself as more than just a game; it's a realm of boundless creativity, an avenue for endless exploration, and a canvas for building dreams. From humble beginnings to becoming a global cultural sensation, Minecraft has truly redefined the gaming landscape and ignited a fervent fan base that continues to thrive.
+                A World of Unprecedented Creativity:
+Minecraft is more than just a game; it's an interactive platform for creative expression. From crafting intricate structures and landscapes to designing elaborate redstone contraptions, players are limited only by their imagination. The simple yet versatile building blocks in the game have given rise to architectural wonders, pixel art masterpieces, and even functioning computers within its virtual world. Whether constructing a medieval castle or recreating famous landmarks, the possibilities are truly endless.
+
+The Thrill of Exploration:
+Embarking on an adventure in the world of Minecraft is like stepping into an uncharted territory teeming with surprises. With vast landscapes, diverse biomes, and mysterious caverns, players find themselves on an exhilarating quest for resources, treasures, and the thrill of discovery. The sense of wonder that accompanies unearthing rare minerals deep underground or stumbling upon hidden dungeons fosters an addictive cycle of exploration and curiosity.
+
+A Strong Community Bond:
+Minecraft's enduring success can be attributed in no small part to its thriving community. From casual players to dedicated modders and content creators, the fan base is a tightly-knit and supportive network. Gamers collaborate on ambitious projects, share gameplay tips, and even organize events, bridging gaps between different cultures and ages. Online platforms, such as YouTube and Twitch, have further bolstered this sense of community, turning ordinary players into online celebrities and fostering a culture of sharing and learning.
+
+Educational and Creative Benefits:
+Beyond being a source of entertainment, Minecraft also serves as a powerful educational tool. Its immersive and interactive nature has been harnessed by educators to teach subjects ranging from history and mathematics to teamwork and problem-solving skills. Additionally, the game's "Creative Mode" allows players to unleash their artistic inclinations without limitations, making it a preferred choice for aspiring architects, designers, and artists.
+
+An Ever-Evolving Universe:
+Minecraft's developer, Mojang Studios, has consistently enriched the game's experience with frequent updates and expansions. These updates introduce new biomes, creatures, gameplay mechanics, and other exciting features, ensuring that the game remains fresh and engaging even for veteran players. The developers' dedication to listening to player feedback and incorporating community suggestions showcases a commitment to keeping the game vibrant and evolving.
+
+Conclusion:
+In the world of gaming, Minecraft stands as a testament to the power of imagination and creativity. Its ability to unite players of all ages, backgrounds, and interests is a testament to its universal appeal. As we celebrate the legacy of Minecraft, we recognize it not only as a game but as a digital masterpiece that has captured the hearts of millions and will continue to inspire generations to come. So, whether you're a master builder, an intrepid explorer, or a budding redstone engineer, Minecraft offers a realm where dreams take shape, creativity knows no bounds, and the adventure never truly ends.
+                
+
+
+            </ul>
+        </ol>
+    </div>
+    <div class="box2">
+        <img src="/images/main.jpg" alt="">
     </div>
 
 </body>
