link to Isaac's page

--- a/Jared/home.html
+++ b/Jared/home.html
@@ -15,7 +15,7 @@
             <li><a href="#">Quintin</a></li>
             <li><a href="#">Bryce</a></li>
             <li><a href="#">Braden</a></li>
-            <li><a href="#">Isaac</a></li>
+            <li><a href="../isaacPage/index.html">Isaac</a></li>
         </ul>
     </nav>
     <main>
