--- a/Jared/home.html
+++ b/Jared/home.html
@@ -12,10 +12,10 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Quintin</a></li>
-            <li><a href="#">Bryce</a></li>
-            <li><a href="#">Braden</a></li>
-            <li><a href="#">Isaac</a></li>
+            <li><a href="">Quintin</a></li>
+            <li><a href="../Brycesfolder/index.html">Bryce</a></li>
+            <li><a href="../Braden/html/Braden.html">Braden</a></li>
+            <li><a href="../isaacPage/index.html">Isaac</a></li>
         </ul>
     </nav>
     <main>
