--- a/Brycesfolder/index.html
+++ b/Brycesfolder/index.html
@@ -9,10 +9,10 @@
 <body>
     <nav class="header" class="btn">
         <ol>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Quinten</a></li>
+            <li><a href="#">Braden</a></li>
+            <li><a href="#">Isaac</a></li>
+            <li><a href="#">Justin</a></li>
         </ol>
     </nav>
                 <br>
@@ -51,7 +51,7 @@ In the world of gaming, Minecraft stands as a testament to the power of imaginat
         </ol>
     </div>
     <div class="box2">
-        <img src="/images/main.jpg" alt="">
+        <center><img src="/images/main.jpg" alt=""></center>
     </div>
 
 </body>
