--- a/Braden/html/Braden.html
+++ b/Braden/html/Braden.html
@@ -9,11 +9,11 @@
             <h2>My Name is Braden Anderson</h2>
             <hr />
             <div id="nav">
-            <a href="isaac">Isaac</a>
-            <a href="Braden">Braden</a>
-            <a href="Jared">Jared</a>
-            <a href="Quintin">Quintin</a>
-            <a href="Bryce">Bryce</a>
+            <a href="../../isaacPage/index.html">Isaac</a>
+            <a href="../../Braden/html/Braden.html">Braden</a>
+            <a href="../../Jared/home.html">Jared</a>
+            <a href="">Quintin</a>
+            <a href="">Bryce</a>
             </div>
             </div>
         <div id="body">
