--- a/Braden/html/Braden.html
+++ b/Braden/html/Braden.html
@@ -13,7 +13,7 @@
             <a href="../../Braden/html/Braden.html">Braden</a>
             <a href="../../Jared/home.html">Jared</a>
             <a href="">Quintin</a>
-            <a href="">Bryce</a>
+            <a href="../../Brycesfolder/index.html">Bryce</a>
             </div>
             </div>
         <div id="body">
