--- a/Brycesfolder/index.html
+++ b/Brycesfolder/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bryces Webpage</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="header" class="btn">
         <ol>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Quinten</a></li>
+            <li><a href="../Braden/html/Braden.html">Braden</a></li>
+            <li><a href="../isaacPage/index.html">Isaac</a></li>
+            <li><a href="../Jared/home.html">Jared</a></li>
         </ol>
     </nav>
                 <br>
@@ -51,7 +51,7 @@ In the world of gaming, Minecraft stands as a testament to the power of imaginat
         </ol>
     </div>
     <div class="box2">
-        <img src="/images/main.jpg" alt="">
+        <center><img src="images/main.jpg" alt=""></center>
     </div>
 
 </body>
