--- a/isaacPage/index.html
+++ b/isaacPage/index.html
@@ -13,7 +13,7 @@
                     <a href="../Braden/html/Braden.html">Braden</a>
                     <a href="../Brycesfolder/index.html">Bryce</a>
                     <a href="#">Isaac</a>
-                    <a href="../Jared/Home.html">Jared</a>
+                    <a href="../Jared/home.html">Jared</a>
                     <a href="../QuinSite/QMain.html">Quin</a>
                 </div>
             </div>
